--- a/index.html
+++ b/index.html
@@ -4,26 +4,29 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link
       href="https://fonts.googleapis.com/css?family=Armata|Patua+One|Press+Start+2P"
       rel="stylesheet"
     />
-    <script rel="stylesheet" href="main.css" ></script>
+    <link rel="stylesheet" href="style.css">
+    <script src="index.js" defer></script>
+
     <title>Br*k%n! D$M</title>
   </head>
   <body>
     <h1>Br*k%n! D$M</h1>
     <section>
       <h2>Disemvowel</h2>
-      <input id="name_to_disemvowel" type="number" />
-      <button onclick="disEmvowel()">Disemvowel</button>
+      <input id="name-to-disemvowel" type="text" />
+      <button onclick="disemvowel()">Disemvowel</button>
       <p class="disemvowel-string"></p>
     </section>
     <section>
       <h2>Is Palindrome?</h2>
 
-      <input id="is-palindrome-input" type="password" />
-      <button onclick="isPalindrome">Is Palindrome?</button>
+      <input id="is-palindrome-input" type="text" />
+      <button onclick="isPalindrome()">Is Palindrome?</button>
       <p id="is-palindrome-p"></p>
     </section>
     <section>
@@ -39,7 +42,7 @@
     <section>
       <h2>Favorite Number Stats</h2>
       <p id="sum-of-favorite-nums">Sum:</p>
-      <p id=average-of-favorite-nums>Average:</p>
+      <p id="average-of-favorite-nums">Average:</p>
       <h3>Odd Favorites</h3>
       <ul id="list-of-odd-favorite-nums"></ul>
     </section>
@@ -49,12 +52,12 @@
         <p>Click Count: </p>
         <p id="click-count">0</p>
         <button id="clicker" onclick="incrementCount()">Click!</button>
-        <button id="clicker" onclick="incrementCount()">RESET!</button>
+        <button id="clicker" onclick="reset()">RESET!</button> <!-- change incrementCount to reset function -->
     </section>
 
     <section>
         <h2>Shopping List</h2>
-        <input type="text" value="What should I buy?" placeholder="What should I buy?" id="add-item"/>
+        <input type="text" placeholder="What should I buy?" id="add-item"/>
         <button onclick="addItem()">Add Item</button>
         <ul class="shopping-list">
 
